fix: edit key press with shift behavior

--- a/style.css
+++ b/style.css
@@ -34,9 +34,11 @@
     transform: scale(1.05);
 }
 
-.key.active {
+.key.active,
+.key:active {
+    box-shadow: 1px 1px 5px 1px black inset;
     background-color: #777;
-    transform: scale(0.95);
+    transform: scale(0.90);
 }
 
 .char {
